# EntropicTrajectories

./: .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  EDMC.aux  EDMC.out  EDMC.tex  Makefile  README.md  grid_test.py  run  setup.py  test.py
.circleci/: config.yml
cmake/Macros/: enable_if_supported.cmake  setup_external_macros.cmake
docs/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  cmake_install.cmake  conf.py  field.rst  gettingstarted.rst  grid.rst  index.rst  install.rst  interpolator.rst  intro.rst  kdtree.rst  lte.rst  matrix.rst  rbf.rst  scalarfield.rst  sgrid.rst  support.rst  ugrid.rst  vector.rst
docs/html/: graph_legend.html  index.html
docs/latex/: refman.tex
include/fastann/: fastann.hpp
include/monomial/: monomial.cpp  monomial.hpp
include/morse_cmake/modules/: MorseInit.cmake
notebooks/: Approximator.ipynb  Gaussian distribution in one dimension.ipynb  Klein-Gordon in one-dimension.ipynb  Loggers.ipynb  MLS Demo 1D.ipynb  Matrix demos.ipynb  Scalar Fields.ipynb  The Wave Equation.ipynb  Vector Fields.ipynb  Wave equation in one dimension.ipynb
notebooks/.ipynb_checkpoints/: Approximator-checkpoint.ipynb  Gaussian distribution in one dimension-checkpoint.ipynb  Klein-Gordon in one-dimension-checkpoint.ipynb  Loggers-checkpoint.ipynb  MLS Demo 1D-checkpoint.ipynb  Matrix class-checkpoint.ipynb  Scalar Fields-checkpoint.ipynb  The Wave Equation-checkpoint.ipynb  Wave equation in one dimension-checkpoint.ipynb
notebooks/.logs/: approx_default.txt  kdtree_default.txt  scalarfield_default.txt  ugrid_default.txt  vectorfield_default.txt
notebooks/Approximators/: MLS Demo 1D.ipynb  RBF Interpolation.ipynb
notebooks/Approximators/.ipynb_checkpoints/: MLS Demo 1D-checkpoint.ipynb  RBF Interpolation-checkpoint.ipynb
notebooks/Approximators/.logs/: approx_default.txt  kdtree_default.txt  rbf_default.txt  ugrid_default.txt
notebooks/Fields/: Klein-Gordon in one-dimension.ipynb  Scalar Fields.ipynb  The Wave Equation.ipynb  Vector Fields.ipynb
notebooks/Fields/.ipynb_checkpoints/: Scalar Fields-checkpoint.ipynb
notebooks/Fields/.logs/: field_2.0.txt  field_SG1.txt  field_SG2.txt  field_cos(x).txt  field_default.txt  field_exp(x).txt  field_f(x) = cos(x).txt  field_sin(x).txt  grid_default.txt  kdtree_default.txt
notebooks/First Order ODEs/: The Heat Equation.ipynb
notebooks/First Order ODEs/.ipynb_checkpoints/: The Heat Equation-checkpoint.ipynb
notebooks/First Order ODEs/.logs/: grid_default.txt  kdtree_default.txt  ugrid_default.txt
notebooks/First order ODE/: The Heat Equation.ipynb
notebooks/First order ODE/.ipynb_checkpoints/: The Heat Equation-checkpoint.ipynb
notebooks/First order ODE/.logs/: kdtree_default.txt  ugrid_default.txt
notebooks/Grid/: Grid Classes.ipynb  KDTree Class.ipynb
notebooks/Grid/.ipynb_checkpoints/: Grid Classes-checkpoint.ipynb  KDTree Class-checkpoint.ipynb
notebooks/Grid/.logs/: KDTree_default.txt  grid_default grid.txt  grid_default.txt  kdtree_default.txt  ugrid_default.txt
notebooks/Interpolators/: Interpolant.ipynb  Interpolator.ipynb  LTE Example.ipynb  RBF Interpolation.ipynb
notebooks/Interpolators/.ipynb_checkpoints/: Interpolant-checkpoint.ipynb  LTE Example-checkpoint.ipynb  MLS Demo 1D-checkpoint.ipynb  RBF Interpolation-checkpoint.ipynb
notebooks/Interpolators/.logs/: approx_default.txt  field_default.txt  grid_default.txt  interpolant_default.txt  interpolator_default.txt  kdtree_default.txt  rbf_default.txt
notebooks/Logger/: Loggers.ipynb
notebooks/logs/: ugrid_default.txt
site/: Makefile  pelicanconf.py  tasks.py
site/output/: archives.html  authors.html  categories.html  index.html  my-first-review.html  tags.html
site/output/author/: nicholas-carrara.html
site/output/category/: review.html
source/: conf.py  index.rst
src/: approximator.cpp  approximator.h  bindings.cpp  grid.cpp  grid.h  kdtree.cpp  kdtree.h  main.cpp  matrix.cpp  matrix.h  params.h  random.h  scalar.cpp  scalar.h  utils.cpp  utils.h  vector.cpp  vector.h
src/et.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/etraj.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fields/: field.cpp  field.h  scalarfield.cpp  scalarfield.h  scalarfieldexample.cpp  scalarfieldexample.h  vectorfield.cpp  vectorfield.h
src/geometry/: geometry.cpp  geometry.h
src/grid/: grid.cpp  grid.h  kdtree.cpp  kdtree.h  ugrid.cpp  ugrid.h
src/integration/: integrator.cpp  integrator.h
src/interpolation/: approximator.cpp  approximator.h  diffeq.cpp  diffeq.h  integrator.cpp  integrator.h  interpolant.cpp  interpolant.h  interpolator.cpp  interpolator.h  localtaylor.cpp  localtaylor.h  radialbasis.cpp  radialbasis.h  rbf.cpp  rbf.h
src/interpolation/local_taylor/: local_taylor_interpolant.cpp  local_taylor_interpolant.h  local_taylor_interpolation.cpp  local_taylor_interpolation.h
src/interpolation/radial_basis/: radial_basis_interpolant.cpp  radial_basis_interpolant.h  radial_basis_interpolation.cpp  radial_basis_interpolation.h
src/linalg/: matrix.cpp  matrix.h  vector.cpp  vector.h
src/log/: log.cpp  log.h
src/logger/: logger.h
src/system/: dynamicalsystem.cpp  dynamicalsystem.h  sph.cpp  sph.h
src/utilities/: params.h  random.cpp  random.h  utilities.cpp  utilities.h
tests/: CMakeLists.txt
tests/1dfield/: test_field.py  test_mls.py
tests/approximations/: MLS.py  monomial.py
tests/field/: test_field.py  test_mls.py  test_scalarfield.cpp
tests/grid/: kdtree_1.cpp  speed_test_grid.py  test_grid.py  test_kdtree.cpp  test_kdtree.py
tests/interpolator/: test_MLS.py  test_approximator.py  test_monomial.py
tests/matrix/: dgemm_speed_test.py  dgemv_speed_test.py  lapack_test.py  matrix_test.py  test_lapack.py  test_level2_blas.py  test_level3_blas.py  test_matrix.py
tests/vector/: ddot_speed_test.py  speed_test_dot_product.cpp  speed_test_results.py  speed_test_results_brute.txt  speed_test_results_ddot.txt  test_level1_blas.py  test_vector.cpp  test_vector.py
utilities/: util.py
